--- a/template/dialog-about.html
+++ b/template/dialog-about.html
@@ -9,6 +9,7 @@
 		<hr/>
 		<a href="http://www.transmissionbt.com/" target="_blank" title="Transmission">Transmission</a>
 		<a href="http://jquery.com/" target="_blank" title="jQuery">jQuery</a>
+		<a href="http://www.jeasyui.com/" target="_blank" title="jQuery EasyUI">EasyUI</a>
 	</div>  
 	<div data-options="region:'south',border:false" style="text-align:right;padding:6px;">
 		<a id="dialog-about-button-close" class="easyui-linkbutton" data-options="iconCls:'icon-close',plain:true" href="javascript:void(0);">close</a>
