Update to v0.3 beta

--- a/style/base.css
+++ b/style/base.css
@@ -142,13 +142,16 @@ html, body {
 	z-index:0;
 }
 .torrent-progress-download{
-	background-color: #acffac;
+	background-color: #77bbff;
 }
 .torrent-progress-error{
 	background-color: #bf4040;
 }
+.torrent-progress-warning{
+	background-color: #cc9900;
+}
 .torrent-progress-seed{
-	background-color: #77bbff;
+	background-color: #acffac;
 }
 .torrent-progress-stop{
 	background-color: #808080;
@@ -261,4 +264,8 @@ html, body {
 
 .icon-transmission{
 	background:url('images/transmission.png') no-repeat;
+}
+
+.icon-more-peers{
+	background:url('images/more-peers.png') no-repeat;
 }
