--- a/template/torrent-attribute.html
+++ b/template/torrent-attribute.html
@@ -32,7 +32,7 @@
 					</tr>
 					<tr>
 						<td class="title"><span id="torrent-attribute-label-leftUntilDone"></span></td>
-						<td><span id="torrent-attribute-value-leftUntilDone"></span></td>
+						<td><span id="torrent-attribute-value-leftUntilDone"></span> (<span id="torrent-attribute-value-remainingTime"></span>)</td>
 						<td class="title"><span id="torrent-attribute-label-completeSize"></span></td>
 						<td><span id="torrent-attribute-value-completeSize"></span></td>
 					</tr>
@@ -532,6 +532,7 @@
 			if (dialog.length)
 			{
 				dialog.dialog("open");
+				dialog.data("ids",system.currentTorrentId);
 				dialog.dialog({content:system.templates["dialog-torrent-changeDownloadDir.html"]});
 				return;
 			}
@@ -548,6 +549,7 @@
 			
 			$.get("template/dialog-torrent-changeDownloadDir.html?time="+(new Date()),function(data){
 				system.templates["dialog-torrent-changeDownloadDir.html"] = data;
+				$("#dialog-torrent-changeDownloadDir").data("ids",system.currentTorrentId);
 				$("#dialog-torrent-changeDownloadDir").dialog({content:data});
 			});
 		});
